generated/parser/LockstepParser.py
# Generated from Lockstep.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LockstepParser ( Parser ):

    grammarFileName = "Lockstep.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "';'", "'struct'", "'{'", 
                     "'}'", "'pure'", "'('", "')'", "','", "'shader'", "'filter'", 
                     "'in'", "'out'", "'uniform'", "'accum'", "'pipeline'", 
                     "'stream'", "'<'", "'>'", "'accumulator'", "'='", "'bind'", 
                     "'fold'", "'return'", "'||'", "'&&'", "'|'", "'^'", 
                     "'&'", "'=='", "'!='", "'<='", "'>='", "'<<'", "'>>'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'.'", "'['", 
                     "']'", "<INVALID>", "'#include'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BOOL", "INCLUDE_DIRECTIVE", "ID", "STRING", 
                      "FLOAT", "INT", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_dependencyDecl = 2
    RULE_importDecl = 3
    RULE_includeDecl = 4
    RULE_structDecl = 5
    RULE_structMember = 6
    RULE_pureDecl = 7
    RULE_pureParamList = 8
    RULE_shaderDecl = 9
    RULE_filterDecl = 10
    RULE_paramList = 11
    RULE_param = 12
    RULE_pipelineDecl = 13
    RULE_pipelineMember = 14
    RULE_streamDecl = 15
    RULE_accumDecl = 16
    RULE_uniformDecl = 17
    RULE_bindBlock = 18
    RULE_bindStmt = 19
    RULE_foldOperator = 20
    RULE_argList = 21
    RULE_statement = 22
    RULE_varDecl = 23
    RULE_assignStmt = 24
    RULE_returnStmt = 25
    RULE_expr = 26
    RULE_logicalExpr = 27
    RULE_logicalOrExpr = 28
    RULE_logicalAndExpr = 29
    RULE_bitwiseOrExpr = 30
    RULE_bitwiseXorExpr = 31
    RULE_bitwiseAndExpr = 32
    RULE_equalityExpr = 33
    RULE_relExpr = 34
    RULE_shiftExpr = 35
    RULE_addExpr = 36
    RULE_mulExpr = 37
    RULE_unaryExpr = 38
    RULE_primaryExpr = 39
    RULE_exprList = 40
    RULE_lvalue = 41
    RULE_typeName = 42
    RULE_typeSuffix = 43
    RULE_genericWidth = 44

    ruleNames =  [ "program", "declaration", "dependencyDecl", "importDecl", 
                   "includeDecl", "structDecl", "structMember", "pureDecl", 
                   "pureParamList", "shaderDecl", "filterDecl", "paramList", 
                   "param", "pipelineDecl", "pipelineMember", "streamDecl", 
                   "accumDecl", "uniformDecl", "bindBlock", "bindStmt", 
                   "foldOperator", "argList", "statement", "varDecl", "assignStmt", 
                   "returnStmt", "expr", "logicalExpr", "logicalOrExpr", 
                   "logicalAndExpr", "bitwiseOrExpr", "bitwiseXorExpr", 
                   "bitwiseAndExpr", "equalityExpr", "relExpr", "shiftExpr", 
                   "addExpr", "mulExpr", "unaryExpr", "primaryExpr", "exprList", 
                   "lvalue", "typeName", "typeSuffix", "genericWidth" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    BOOL=45
    INCLUDE_DIRECTIVE=46
    ID=47
    STRING=48
    FLOAT=49
    INT=50
    WS=51
    COMMENT=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LockstepParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(LockstepParser.DeclarationContext,i)


        def getRuleIndex(self):
            return LockstepParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LockstepParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70368744246346) != 0):
                self.state = 90
                self.declaration()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(LockstepParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dependencyDecl(self):
            return self.getTypedRuleContext(LockstepParser.DependencyDeclContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(LockstepParser.StructDeclContext,0)


        def pureDecl(self):
            return self.getTypedRuleContext(LockstepParser.PureDeclContext,0)


        def shaderDecl(self):
            return self.getTypedRuleContext(LockstepParser.ShaderDeclContext,0)


        def filterDecl(self):
            return self.getTypedRuleContext(LockstepParser.FilterDeclContext,0)


        def pipelineDecl(self):
            return self.getTypedRuleContext(LockstepParser.PipelineDeclContext,0)


        def getRuleIndex(self):
            return LockstepParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = LockstepParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.dependencyDecl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.structDecl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.pureDecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.shaderDecl()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.filterDecl()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 6)
                self.state = 103
                self.pipelineDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependencyDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDecl(self):
            return self.getTypedRuleContext(LockstepParser.ImportDeclContext,0)


        def includeDecl(self):
            return self.getTypedRuleContext(LockstepParser.IncludeDeclContext,0)


        def getRuleIndex(self):
            return LockstepParser.RULE_dependencyDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDependencyDecl" ):
                listener.enterDependencyDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDependencyDecl" ):
                listener.exitDependencyDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDependencyDecl" ):
                return visitor.visitDependencyDecl(self)
            else:
                return visitor.visitChildren(self)




    def dependencyDecl(self):

        localctx = LockstepParser.DependencyDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dependencyDecl)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.importDecl()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.includeDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(LockstepParser.STRING, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDecl" ):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = LockstepParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(LockstepParser.T__0)
            self.state = 111
            self.match(LockstepParser.STRING)
            self.state = 112
            self.match(LockstepParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE_DIRECTIVE(self):
            return self.getToken(LockstepParser.INCLUDE_DIRECTIVE, 0)

        def STRING(self):
            return self.getToken(LockstepParser.STRING, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_includeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeDecl" ):
                listener.enterIncludeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeDecl" ):
                listener.exitIncludeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeDecl" ):
                return visitor.visitIncludeDecl(self)
            else:
                return visitor.visitChildren(self)




    def includeDecl(self):

        localctx = LockstepParser.IncludeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_includeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(LockstepParser.INCLUDE_DIRECTIVE)
            self.state = 115
            self.match(LockstepParser.STRING)
            self.state = 116
            self.match(LockstepParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def structMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StructMemberContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StructMemberContext,i)


        def getRuleIndex(self):
            return LockstepParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = LockstepParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(LockstepParser.T__2)
            self.state = 119
            self.match(LockstepParser.ID)
            self.state = 120
            self.match(LockstepParser.T__3)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==47:
                self.state = 121
                self.structMember()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(LockstepParser.T__4)
            self.state = 128
            self.match(LockstepParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(LockstepParser.TypeNameContext,0)


        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_structMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructMember" ):
                listener.enterStructMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructMember" ):
                listener.exitStructMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructMember" ):
                return visitor.visitStructMember(self)
            else:
                return visitor.visitChildren(self)




    def structMember(self):

        localctx = LockstepParser.StructMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_structMember)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.typeName()
            self.state = 131
            self.match(LockstepParser.ID)
            self.state = 132
            self.match(LockstepParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PureDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(LockstepParser.TypeNameContext,0)


        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def pureParamList(self):
            return self.getTypedRuleContext(LockstepParser.PureParamListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StatementContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StatementContext,i)


        def getRuleIndex(self):
            return LockstepParser.RULE_pureDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPureDecl" ):
                listener.enterPureDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPureDecl" ):
                listener.exitPureDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPureDecl" ):
                return visitor.visitPureDecl(self)
            else:
                return visitor.visitChildren(self)




    def pureDecl(self):

        localctx = LockstepParser.PureDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pureDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(LockstepParser.T__5)
            self.state = 135
            self.typeName()
            self.state = 136
            self.match(LockstepParser.ID)
            self.state = 137
            self.match(LockstepParser.T__6)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 138
                self.pureParamList()


            self.state = 141
            self.match(LockstepParser.T__7)
            self.state = 142
            self.match(LockstepParser.T__3)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24 or _la==47:
                self.state = 143
                self.statement()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(LockstepParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PureParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.TypeNameContext)
            else:
                return self.getTypedRuleContext(LockstepParser.TypeNameContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LockstepParser.ID)
            else:
                return self.getToken(LockstepParser.ID, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_pureParamList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPureParamList" ):
                listener.enterPureParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPureParamList" ):
                listener.exitPureParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPureParamList" ):
                return visitor.visitPureParamList(self)
            else:
                return visitor.visitChildren(self)




    def pureParamList(self):

        localctx = LockstepParser.PureParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pureParamList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.typeName()
            self.state = 152
            self.match(LockstepParser.ID)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 153
                self.match(LockstepParser.T__8)
                self.state = 154
                self.typeName()
                self.state = 155
                self.match(LockstepParser.ID)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShaderDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(LockstepParser.ParamListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StatementContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StatementContext,i)


        def getRuleIndex(self):
            return LockstepParser.RULE_shaderDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShaderDecl" ):
                listener.enterShaderDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShaderDecl" ):
                listener.exitShaderDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShaderDecl" ):
                return visitor.visitShaderDecl(self)
            else:
                return visitor.visitChildren(self)




    def shaderDecl(self):

        localctx = LockstepParser.ShaderDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_shaderDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(LockstepParser.T__9)
            self.state = 163
            self.match(LockstepParser.ID)
            self.state = 164
            self.match(LockstepParser.T__6)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0):
                self.state = 165
                self.paramList()


            self.state = 168
            self.match(LockstepParser.T__7)
            self.state = 169
            self.match(LockstepParser.T__3)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24 or _la==47:
                self.state = 170
                self.statement()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(LockstepParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(LockstepParser.ParamListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StatementContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StatementContext,i)


        def getRuleIndex(self):
            return LockstepParser.RULE_filterDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterDecl" ):
                listener.enterFilterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterDecl" ):
                listener.exitFilterDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterDecl" ):
                return visitor.visitFilterDecl(self)
            else:
                return visitor.visitChildren(self)




    def filterDecl(self):

        localctx = LockstepParser.FilterDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_filterDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(LockstepParser.T__10)
            self.state = 179
            self.match(LockstepParser.ID)
            self.state = 180
            self.match(LockstepParser.T__6)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0):
                self.state = 181
                self.paramList()


            self.state = 184
            self.match(LockstepParser.T__7)
            self.state = 185
            self.match(LockstepParser.T__3)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24 or _la==47:
                self.state = 186
                self.statement()
                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 192
            self.match(LockstepParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.ParamContext)
            else:
                return self.getTypedRuleContext(LockstepParser.ParamContext,i)


        def getRuleIndex(self):
            return LockstepParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = LockstepParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.param()
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 195
                self.match(LockstepParser.T__8)
                self.state = 196
                self.param()
                self.state = 201
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(LockstepParser.TypeNameContext,0)


        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):
